Take in the fabric argument so we can handle mod loaders in a similar way